Tue Apr 10 20:32:44 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Fixed the make install.

Tue Apr 10 16:20:34 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* When MAC computation fails the silc_packet_decrypt returned 0
	  even though it was supposed to return -1.  Fixed this.  The
	  affected file is lib/silccore/silcpacket.c.

	* Do not replace the config files in /etc/silc (in make install)
	  if they already exist.  Affected file ./Makefile.am.

	* Do not send re-key packets immediately but through packet queue.
	  Affected file silcd/protocol.c and lib/silcclient/protocol.c.

	* Changed silc_net_check_host_by_sock to return FALSE if the
	  IP/DNS could not be resolved.  Though, it returns the IP address
	  now even if it could not resolve it (but returns also FALSE).
	  Affected file lib/silcutil/silcnet.[ch].

Mon Apr  9 21:54:44 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Added silc_pkcs_decode_identifier to decode the public key's
	  identifier.  Affected file lib/silccrypt/silpkcs.[ch].
	  Added also silc_pkcs_free_identifier.  Added also new context
	  SilcPublicKeyIdentifier.

	* Added -S option to the silc client.  It is used to dump the
	  contents of the specified public key file.

	* Changed the PKCS api to return the public key length when
	  setting the public key.

	* Fixed a fatal bug in the public and private key file loading.
	  Affected file lib/silccrypt/silcpkcs.c.

	* Execute the packet parsing for client with zero (0) timeout
	  if the protocol is active.  Affected file silcd/server.c.

Sun Apr  8 19:30:56 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Made the key generation options to the silcd program.  Added
	  -C option, equivalent to client's option.

	* Added new [ServerKeys] config section to the server.  It
	  configures the server's public and private key.

	* Defined generic Public Key Payload into the protocol
	  specification to send specific type of public keys and