@@ -1,3 +1,10 @@
+Wed Apr 11 16:59:59 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>
+
+	* Made the configure.in.pre work on Solaris.  Patch by salo.
+
+	* Made all ciphers compatible with non-x86 machines.  Defined
+	  CBC mode macros into lib/silccrypt/ciphers_def.h.
+
 Tue Apr 10 20:32:44 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>
 
 	* Fixed the make install.
